--- a/spe_events/static/atce/css/_content.scss
+++ b/spe_events/static/atce/css/_content.scss
@@ -212,3 +212,18 @@ $itemboxpadding:  20px;
 .byTheNumbersRow {
   padding:                20px 0;
 }
+
+@media (max-width: 1280px) {
+  .nav-tabs.nav-justified > li {
+    float: left;
+    width: 50%;
+  }
+}
+
+.singleLinkBox {
+  border: 1px solid $col-grey-light;
+  padding: 15px;
+
+  @include border-radius(5px);
+  @include box-shadow(1px, 1px, 2px, rgba(0,0,0,.4));
+}
