--- a/spe_events/static/atce/css/_vars.scss
+++ b/spe_events/static/atce/css/_vars.scss
@@ -11,7 +11,9 @@ $col-spe-blue:          #0c4c93;
 $col-spe-blue-dark:     #1c407d;
 $col-grey-dark:         #363636;
 $col-grey:              grey;
+$col-grey-medium:       #AAAAAA;
 $col-grey-light:        #e1e1e1;
+$col-subtab:            #AABBAA;
 
 //$font-main:             'Montserrat', sans-serif;
 $font-main:             'Open Sans', sans-serif;
