--- a/spe_events/static/atce/css/mainstyle.css
+++ b/spe_events/static/atce/css/mainstyle.css
@@ -133,6 +133,10 @@ a:hover { text-decoration: none; }
 
 .panel-tabs .tab-content { padding: 20px 10px 0 10px; }
 
+.panel-tabs .nav-tabs { background: none; }
+
+.panel-tabs .nav-tabs li { background-color: #AABBAA; border: 0; -webkit-border-top-left-radius: 5px; -webkit-border-top-right-radius: 5px; -webkit-border-bottom-right-radius: 0; -webkit-border-bottom-left-radius: 0; -moz-border-radius-topleft: 5px; -moz-border-radius-topright: 5px; -moz-border-radius-bottomright: 0; -moz-border-radius-bottomleft: 0; border-top-left-radius: 5px; border-top-right-radius: 5px; border-bottom-right-radius: 0; border-bottom-left-radius: 0; }
+
 .sponsorBar { padding: 20px 0; border-top: 2px solid #e1e1e1; border-bottom: 2px solid #e1e1e1; }
 
 .byTheNumbersBar { background-color: #67c18d; }
