--- a/spe_events/static/atce/css/mainstyle.css
+++ b/spe_events/static/atce/css/mainstyle.css
@@ -193,6 +193,10 @@ a:hover { text-decoration: none; }
 
 .singleLinkBox { border: 1px solid #e1e1e1; padding: 15px; -webkit-border-radius: 5px !important; -khtml-border-radius: 5px !important; -moz-border-radius: 5px !important; -ms-border-radius: 5px !important; -o-border-radius: 5px !important; border-radius: 5px !important; -webkit-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4); -khtml-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4); -moz-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4); -ms-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4); -o-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4); box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4); }
 
+.table-tab { border: 1px solid #e1e1e1; }
+
+.table-tab td { border: 1px solid #e1e1e1; padding: 10px; }
+
 /* =================================================================== */
 /* FOOTER STYLES FOR ATCE
 ====================================================================== */
