ics / icalendar Support
Created an event plugin to wrap a portion of a page with an ics
download (custom defined)

Added the ability to add a calendar download to agenda items
(automatic).

--- a/spe_custom_agenda/templates/cms_plugins/accordion_by_session.html
+++ b/spe_custom_agenda/templates/cms_plugins/accordion_by_session.html
@@ -66,6 +66,11 @@
                 <span class="col-md-4 text-right">{{ item.location }}</span>
             </button>
             <div class="panel col-md-9">
+                {% if item.show_ical_download %}
+                    <a href="{% url 'agenda_ics_export' item.id %}">
+                        <span class="glyphicon glyphicon-calendar"></span>
+                    </a>
+                {% endif %}
                 <p>
                     {{ item.session_description | safe }}
                 </p>
