--- a/mainsite/static/animate/carouselticker/carouselTicker-min.css
+++ b/mainsite/static/animate/carouselticker/carouselTicker-min.css
@@ -21,23 +21,8 @@
   left: 0;
   right: 0;
   top: 0;
-  bottom: 0;
-  /*background: #fff url("../images/loader.gif") center center no-repeat;*/ }
+  bottom: 0; }
 
-/*!***/
-/** CSS style for vertical direction*/
-/***!*/
-/*.carouselTicker_vertical .carouselTicker__list{*/
-/*margin: 0;*/
-/*}*/
-/*.carouselTicker_vertical .carouselTicker__item{*/
-/*margin: 0 0 5px 0;*/
-/*border: 4px solid red;*/
-/*width: 100px;*/
-/*height: 60px;*/
-/*line-height: 60px;*/
-/*text-align: center;*/
-/*}*/
 #carouselTicker .carouselTicker__item {
   /*width: auto;*/
   /*height: auto;*/
