--- a/spe_custom_menus/templates/spe_custom_menus/YAMM_menu.html
+++ b/spe_custom_menus/templates/spe_custom_menus/YAMM_menu.html
@@ -2,7 +2,7 @@
     <link href="css/yamm.css" rel="stylesheet">
 </head>
 
-<nav class="yamm navbar" role="navigation">
+<nav class="yamm navbar hidden-xs" role="navigation">
     <div class="container-fluid">
 
         {% if branding %}
@@ -47,4 +47,52 @@
             {% endfor %}
     </ul>
     </div>
+</nav>
+
+<nav class="yamm navbar visible-xs" role="navigation">
+    <div class="container-fluid">
+
+
+        <a class="btn btn-default hamburger" role="button" data-toggle="collapse" href="#collapseHamMenu" aria-expanded="false" aria-controls="collapseHamMenu">
+          <i class="fa fa-bars" aria-hidden="true"></i>
+        </a>
+        <div class="collapse" id="collapseHamMenu">
+          <div class="nav navbar-nav">
+
+                {% for item in items %}
+                    {% if item.is_back_up %}
+                        </div></div></ul></li>
+                    {% endif %}
+                    {% if item.is_divider %}
+                        <div role="separator" class="divider"></div>
+                    {% else %}
+                        {% if item.is_dropdown_node %}
+                            <li class="dropdown yamm-fw">
+                            <a class="dropdown-toggle" data-toggle="dropdown" href="{{ item.get_absolute_url }}">{{ item.title }}
+                                <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                            <div class="yamm-content">
+                            <div class="row megarow">
+                        {% else %}
+                            {% if item.is_dropdown_header %}
+                                <li class="dropdown-header">{{ item.title }}</li>
+                            {% else %}
+                                <li><a href="{{ item.get_absolute_url }}"
+                                {% if item.new_window %}
+                                    target="_blank"
+                                {% endif %}
+                                >{{ item.title }}</a></li>
+                            {% endif %}
+                        {% endif %}
+                    {% if forloop.last %}
+                        {% if item.level == 2 %}
+                            </div></div></ul></li>
+                        {% endif %}
+                    {% endif %}
+                    {% endif %}
+                {% endfor %}
+            </ul>
+            </div>
+        </div>
+
 </nav>
