--- a/spe_custom_menus/templates/spe_custom_menus/YAMM_menu.html
+++ b/spe_custom_menus/templates/spe_custom_menus/YAMM_menu.html
@@ -53,7 +53,7 @@
     <div class="container-fluid">
 
 
-        <a class="btn btn-default hamburger" role="button" data-toggle="collapse" href="#collapseHamMenu" aria-expanded="false" aria-controls="collapseHamMenu">
+        <a class="hamburger" data-toggle="collapse" href="#collapseHamMenu" aria-expanded="false" aria-controls="collapseHamMenu">
           <i class="fa fa-bars" aria-hidden="true"></i>
         </a>
         <div class="collapse" id="collapseHamMenu">
