--- a/cmsplugin_bootstrap_columns/templates/cmsplugin_bootstrap_columns/column.html
+++ b/cmsplugin_bootstrap_columns/templates/cmsplugin_bootstrap_columns/column.html
@@ -1,6 +1,15 @@
 {% load cms_tags %}
 
-<div class="{{instance.get_column_classes}} bscol" id="{{instance.element_id}}" styles="{{instance.element_style}}">
+<style>
+    .style-{{ instance.id }} {
+    {% if not instance.transparent %}
+        background-color: {{ instance.bkg_color }};
+    {% endif %}
+    }
+</style>
+
+<div class="{{ instance.get_column_classes }} style-{{ instance.id }}" id="{{ instance.element_id }}"
+     styles="{{ instance.element_style }}">
     {% for plugin in instance.child_plugin_instances %}
         {% render_plugin plugin %}
     {% endfor %}
