--- a/mainsite/templates/html5_bootstrap.html
+++ b/mainsite/templates/html5_bootstrap.html
@@ -4,6 +4,7 @@
 
     <script src="{% static 'js/jquery/jquery-1.12.0.min.js' %}"></script>
     <script src="{% static 'js/jquery/jquery-migrate-1.2.1.min.js' %}"></script>
+{#    <script src="https://code.jquery.com/jquery-1.3.1.min.js"></script>#}
 
     <script src="{% static 'cookiebar/jquery.cookiebar.js' %}"></script>
     <link rel="stylesheet" type="text/css" media="all" href="{% static 'cookiebar/jquery.cookiebar.css' %}" />
