--- a/spe_ui_components/templates/basic/singlelink.html
+++ b/spe_ui_components/templates/basic/singlelink.html
@@ -1,16 +1,22 @@
 {% load cms_tags %}
 
-{% if instance.isinbox %}<div class="singleLinkBox {{ instance.width }}" style="height:{{ instance.height }}px;background-color:{{ instance.bkg_color }}; color:{{ instance.txt_color }};">{% endif %}
+{% if instance.isinbox %}
+    <div class="singleLinkBox {{ instance.width }}"
+         style="height:{{ instance.height }}px;background-color:{{ instance.bkg_color }}; color:{{ instance.txt_color }};">{% endif %}
 {% if instance.isbutton %}
     <a href="{{ instance.get_absolute_url }}"
             {% if instance.new_window %}
-                target="_blank"
+       target="_blank"
             {% endif %}
-    class="btn btn-default singleLink {{ instance.width }}" role="button" style="background-color:{{ instance.bkg_color }}; color:{{ instance.txt_color }}; height:{{ instance.height }}px;">{% else %}<a href="{{ instance.get_absolute_url }}"
+       class="btn btn-default singleLink {{ instance.width }}" role="button"
+       style="background-color:{{ instance.bkg_color }}; color:{{ instance.txt_color }}; height:{{ instance.height }}px;">{% else %}
+    <a href="{{ instance.get_absolute_url }}"
             {% if instance.new_window %}
-                target="_blank"
+       target="_blank"
             {% endif %}
-    class="singleLink" style="color:{{ instance.txt_color }}">
+       class="singleLink" style="color:{{ instance.txt_color }}">
 {% endif %}
-{% if instance.iconurl %}<img src="{{ instance.iconurl }}" style="height:10px; width:10px;"/> {% elif intance.icon %}<img src="{{ instance.icon }}" style="height:15px; width:15px;"/> {% elif instance.fontawesome %}{{ instance.fontawesome | safe }} {% endif %} {{ instance.text }}</a>
+{% if instance.iconurl %}<img src="{{ instance.iconurl }}" style="height:10px; width:10px;"/> {% elif intance.icon %}
+    <img src="{{ instance.icon }}" style="height:15px; width:15px;"/>
+    {% elif instance.fontawesome %}{{ instance.fontawesome | safe }} {% endif %} {{ instance.text }}</a>
 {% if instance.isinbox %}</div>{% endif %}
