--- a/spe_ui_components/templates/tabs/accordionheader.html
+++ b/spe_ui_components/templates/tabs/accordionheader.html
@@ -3,7 +3,8 @@
 <div id="accordion-plugin-{{ instance.id }}" class="panel-group">
     {% for accordion in instance.child_plugin_instances %}
         <div class="panel panel-default">
-            <a data-toggle="collapse" data-parent="#accordion-plugin-{{ instance.id }}" href="#collapse-{{ accordion.id }}">
+            <a data-toggle="collapse" data-parent="#accordion-plugin-{{ instance.id }}"
+               href="#collapse-{{ accordion.id }}">
                 <div class="panel-heading">
                     <h4 class="panel-title">
                         {{ accordion.title }}<i class="fa fa-plus" aria-hidden="true" style="float:right;"></i>
