--- a/spe_ui_components/templates/modal/modal.html
+++ b/spe_ui_components/templates/modal/modal.html
@@ -1,20 +1,25 @@
 {% load sekizai_tags cms_tags %}
 
+{% if instance.start_open %}
+    <script type="text/javascript">
+        $(window).on('load',function(){
+            $('#panel-modal-{{ instance.id }}').modal('show');
+        });
+    </script>
+{% endif %}
+
 <button type="button" class="btn btn-primary btn-lg text-center center-block" data-toggle="modal"
         data-target="#panel-modal-{{ instance.id }}">
     {{ instance.label }}
 </button>
 
-{% if instance.start_open %}
-    <div id="panel-modal-{{ instance.id }}" class="modal show" tabindex="-1" role="dialog">
-{% else %}
-    <div id="panel-modal-{{ instance.id }}" class="modal fade" tabindex="-1" role="dialog">
-{% endif %}
+<div id="panel-modal-{{ instance.id }}" class="modal fade" tabindex="-1" role="dialog">
 <div class="modal-dialog" role="document">
     <div class="modal-content">
         {% for child in instance.child_plugin_instances %}
             {% render_plugin child %}
         {% endfor %}
     </div>
+    <a class="close" data-dismiss="modal">CLOSE</a>
 </div>
 </div>
