--- a/spe_events/templates/atce/atce_base.html
+++ b/spe_events/templates/atce/atce_base.html
@@ -69,7 +69,7 @@
                 <p>The Society of Petroleum Engineers (SPE) is a not-for-profit organization. Income from this event will be invested back into SPE to support many other Society programs. When you attend an SPE event, you help provide even more opportunities for industry professionals to enhance their technical and professional competence. Scholarships, certification, the Distinguished Lecturer program, and SPE's energy education program Energy4me are just a few examples of programs that are supported by SPE.</p>
                 <p>&nbsp;</p>
                 <h3>Get In Touch</h3>
-                <h4><i class="fa fa-phone-square" aria-hidden="true"></i> 1.972.952.9393 &nbsp;&nbsp;&nbsp; <i class="fa fa-envelope" aria-hidden="true"></i> <a href="mailto:support@spe.org">support@spe.org</a></h4>
+                <h4><i class="fa fa-phone-square" aria-hidden="true"></i> 1.972.952.9393 <i class="fa fa-envelope" aria-hidden="true"></i> <a href="mailto:service@spe.org">service@spe.org</a></h4>
                 <h4 class="footerSocials">
                     <a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
                     <a href="#"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
