--- a/spe_events/templates/spe_events/plugins/image_items/ii_boxes.html
+++ b/spe_events/templates/spe_events/plugins/image_items/ii_boxes.html
@@ -13,7 +13,7 @@
                 {% elif items.count == 1 %}
                     col-xs-12
                 {% endif %} itembox" style="height: {{ instance.pluginheight }}px">
-                <div class="panel" style="background: url({{ item.get_image_url }}) no-repeat {{ item.imageposition }} / cover; height: 100%">
+                <div class="" style="background: url({{ item.get_image_url }}) no-repeat {{ item.imageposition }} / cover; height: 100%">
                     <div class="panel-body">
                         <h2>{{ item.title }}</h2>
                     </div>
