--- a/spe_events/templates/spe_events/plugins/image_items/ii_mini_slider.html
+++ b/spe_events/templates/spe_events/plugins/image_items/ii_mini_slider.html
@@ -22,11 +22,15 @@
                   {% if forloop.first %}
 
                       <div class="item active" style="background-image: url({{ item.get_image_url }});
-                              background-position:{{ item.imageposition }}; background-size: cover; height: {{ instance.pluginheight }}px"><a href="{{ item.get_absolute_url }}"></a></div>
+                              background-position:{{ item.imageposition }}; background-size: cover; height: {{ instance.pluginheight }}px">
+                          <a href="{{ item.get_absolute_url }}">
+                              <div class="carousel-linkbox" style="height: 100%;"></div>
+                          </a></div>
                   {% else %}
 
                       <div class="item" style="background-image: url({{ item.get_image_url }});
-                              background-position:{{ item.imageposition }}; background-size: cover; height: {{ instance.pluginheight }}px"><a href="{{ item.get_absolute_url }}"></a></div>
+                              background-position:{{ item.imageposition }}; background-size: cover; height: {{ instance.pluginheight }}px"><a href="{{ item.get_absolute_url }}">
+                              <div class="carousel-linkbox" style="height: 100%;"></div></a></div>
 
                   {% endif %}
               {% endif %}
