--- a/spe_events/templates/spe_events/plugins/image_items/ii_z_elements.html
+++ b/spe_events/templates/spe_events/plugins/image_items/ii_z_elements.html
@@ -19,6 +19,7 @@
         {{ item.issponsor }}<br>
         {{ item.sponsorlevele }}<br>
         {{ item.sponsoredevents }}<br>
+        {{ item.new_window }}<br>
     </p>
 
 {% endfor %}
