--- a/spe_events/templates/spe_events/plugins/image_items/ii_sponsor_panels.html
+++ b/spe_events/templates/spe_events/plugins/image_items/ii_sponsor_panels.html
@@ -1,17 +1,25 @@
-<!-- This is the Sponsor Panel template. -->
+<!-- This is the BOXES template. -->
+{{ instance.pluginheight }}px<br>
 
 {% for item in items %}
+
     <p>
-    {{ item.order }}<br>
-    {{ item.item_list }}<br>
-    {{ item.get_image_url }}<br>
-    {{ item.title }}<br>
-    {{ item.text }}<br>
-    {{ item.external_link }}<br>
-    {{ item.internal_link }}<br>
-    {{ item.isvisible }}<br>
-    {{ item.issponsor }}<br>
-    {{ item.sponsorlevele }}<br>
-    {{ item.sponsoredevents }}<br>
+        {{ items.count }}<br>
+        {{ forloop.counter }}<br>
+        {{ instance.id }}<br>
+        {{ item.order }}<br>
+        {{ item.item_list }}<br>
+        {{ item.get_image_url }}<br>
+        {{ item.image.url }}<br>
+        {{ item.imageposition }}<br>
+        {{ item.title }}<br>
+        {{ item.text }}<br>
+        {{ item.get_absolute_url }}<br>
+        {{ item.isvisible }}<br>
+        {{ item.issponsor }}<br>
+        {{ item.sponsorlevele }}<br>
+        {{ item.sponsoredevents }}<br>
+        {{ item.new_window }}<br>
     </p>
+
 {% endfor %}
