Tab Color Change

--- a/spe_events/static/atce/css/_vars.scss
+++ b/spe_events/static/atce/css/_vars.scss
@@ -13,7 +13,7 @@ $col-grey-dark:         #363636;
 $col-grey:              grey;
 $col-grey-medium:       #AAAAAA;
 $col-grey-light:        #e1e1e1;
-$col-subtab:            #AABBAA;
+$col-subtab:            #E8E8E8;
 
 //$font-main:             'Montserrat', sans-serif;
 $font-main:             'Open Sans', sans-serif;
