--- a/spe_events/static/atce/css/_content.scss
+++ b/spe_events/static/atce/css/_content.scss
@@ -252,8 +252,8 @@ $itemboxpadding:  20px;
 }
 
 .singleLinkBox {
-  border:                 1px solid $col-grey-light;
-  padding:                15px;
+  //border:                 1px solid $col-grey-light;
+  //padding:                15px;
 
   @include border-radius(5px);
   @include box-shadow(1px, 1px, 2px, rgba(0,0,0,.4));
