--- a/spe_ui_components/templates/singlelink/singlelink.html
+++ b/spe_ui_components/templates/singlelink/singlelink.html
@@ -1,22 +1,29 @@
 {% load cms_tags %}
 
-{% if instance.isinbox %}
-    <div class="singleLinkBox {{ instance.width }}"
-         style="height:{{ instance.height }}px;background-color:{{ instance.bkg_color }}; color:{{ instance.txt_color }};">{% endif %}
-{% if instance.isbutton %}
-    <a href="{{ instance.get_absolute_url }}"
-            {% if instance.new_window %}
-       target="_blank"
-            {% endif %}
-       class="btn btn-default singleLink {{ instance.width }}" role="button"
-       style="background-color:{{ instance.bkg_color }}; color:{{ instance.txt_color }}; height:{{ instance.height }}px;">{% else %}
-    <a href="{{ instance.get_absolute_url }}"
-            {% if instance.new_window %}
-       target="_blank"
-            {% endif %}
-       class="singleLink" style="color:{{ instance.txt_color }}">
-{% endif %}
-{% if instance.iconurl %}<img src="{{ instance.iconurl }}" style="height:10px; width:10px;"/> {% elif intance.icon %}
-    <img src="{{ instance.icon }}" style="height:15px; width:15px;"/>
-    {% elif instance.fontawesome %}{{ instance.fontawesome | safe }} {% endif %} {{ instance.text }}</a>
-{% if instance.isinbox %}</div>{% endif %}
+<style>
+    .btn {
+        background-color: {{ instance.bkg_color }};
+        color: {{ instance.txt_color }};
+        {% if instance.height %}height: {{ instance.height }}px;{% endif %}
+        {% if instance.boxwidth %}width: {{ instance.boxwidth }}px;{% endif %}
+        border: {{ instance.bordersize }}px solid {{ instance.bordercol }};
+    }
+    .btn:hover {
+        background-color: {{ instance.hv_bkg_color }};
+        color: {{ instance.hv_txt_color }};
+        border-color: {{ instance.hv_bordercol }};
+    }
+    .singleLink {
+        background-color:{{ instance.bkg_color }};
+        color:{{ instance.txt_color }};
+        {% if instance.height %}height:{{ instance.height }}px;{% endif %}
+        {% if instance.fontsize %}font-size: {{ instance.fontsize }}px;{% endif %}
+        {% if instance.padding %}padding: {{ instance.padding }}px;{% endif %}
+    }
+</style>
+
+<a href="{{ instance.get_absolute_url }}" {% if instance.new_window %}target="_blank"{% endif %} class="btn btn-default singleLink" role="button">
+{% if instance.iconurl %}<img src="{{ instance.iconurl }}" style="height:{{ instance.iconsize }}px; width:{{ instance.iconsize }}px;"/>{% endif %}
+{% if instance.iconimage.url %}<img src="{{ instance.iconimage.url }}" style="height:{{ instance.iconsize }}px; width:{{ instance.iconsize }}px;"/>{% endif %}
+{% if instance.fontawesome %}{{ instance.fontawesome | safe }}{% endif %} {{ instance.text }}</a>
+
